[project]
name = "dmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.12.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pyqt6>=6.11.0",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]
